[package]
name = "adventofcode2019"
version = "0.1.0"
authors = ["Tristan King <tristan.king@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "*"
crossbeam = "*"

[lib]
name = "intcode"
path = "intcode.rs"

[[bin]]
name = "day_01"
path = "day_01.rs"

[[bin]]
name = "day_02"
path = "day_02.rs"

[[bin]]
name = "day_03"
path = "day_03.rs"

[[bin]]
name = "day_04"
path = "day_04.rs"

[[bin]]
name = "day_05"
path = "day_05.rs"

[[bin]]
name = "day_06"
path = "day_06.rs"

[[bin]]
name = "day_07"
path = "day_07.rs"

